--- a/audio/asp/en/0311_dancing_audio-slides.html
+++ b/audio/asp/en/0311_dancing_audio-slides.html
@@ -147,7 +147,7 @@
 <section class="slide level1">
 
 <h2 id="dancing-1">Dancing</h2>
-<strong>Text:</strong> Mary Nabire, Tessa Welch<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
+<strong>Text:</strong> Mary Nabire, Tessa Welch<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Darshan Soni<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
