--- a/audio/asp/index.html
+++ b/audio/asp/index.html
@@ -51,9 +51,22 @@
             <li><a href="en/0179_red_audio-slides.html" target="_blank">Red</a></li>
             <li><a href="en/0190_esther-takes-mummys-sweets_audio-slides.html" target="_blank">Esther takes Mummy's sweets</a></li>
             <li><a href="en/0201_donkey-child_audio-slides.html" target="_blank">Donkey Child</a></li>
+            <li><a href="en/0210_tingi-and-the-cows_audio-slides.html" target="_blank">Tingi and the Cows</a></li>
+            <li><a href="en/0231_weather-book_audio-slides.html" target="_blank">Weather book</a></li>
+            <li><a href="en/0234_andiswa-soccer-star_audio-slides.html" target="_blank">Andiswa Soccer Star</a></li>
+            <li><a href="en/0262_magozwe_audio-slides.html" target="_blank">Magozwe</a></li>
+            <li><a href="en/0271_two_audio-slides.html" target="_blank">Two</a></li>
+            <li><a href="en/0291_what-vusis-sister-said_audio-slides.html" target="_blank">What Vusi's sister said</a></li>
             <li><a href="en/0293_i-enjoy_audio-slides.html" target="_blank">I enjoy</a></li>
+            <li><a href="en/0294_grandmas-bananas_audio-slides.html" target="_blank">Grandma's bananas</a></li>
+            <li><a href="en/0296_tom-the-banana-seller_audio-slides.html" target="_blank">Tom the banana seller</a></li>
+            <li><a href="en/0302_fire_audio-slides.html" target="_blank">Fire</a></li>
             <li><a href="en/0311_dancing_audio-slides.html" target="_blank">Dancing</a></li>
+            <li><a href="en/0315_sakimas-song_audio-slides.html" target="_blank">Sakima's song</a></li>
+            <li><a href="en/0324_day-i-left-home-for-the-city_audio-slides.html" target="_blank">Day I left home for the city</a></li>
             <li><a href="en/0331_rain_audio-slides.html" target="_blank">Rain</a></li>
+            <li><a href="en/0337_children-of-wax_audio-slides.html" target="_blank">Children of wax</a></li>
+            <li><a href="en/0342_punishment_audio-slides.html" target="_blank">Punishment</a></li>
           </ul>
         <h3>Luganda</h3>
           <ul>
