--- a/audio/asp/en/0052_simbegwire_audio-slides.html
+++ b/audio/asp/en/0052_simbegwire_audio-slides.html
@@ -258,7 +258,7 @@
 <section class="slide level1">
 
 <h2 id="simbegwire-1">Simbegwire</h2>
-<strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
+<strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Darshan Soni<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
