--- a/audio/asp/en/0110_a-tiny-seed-the-story-of-wangari-maathai_audio-slides.html
+++ b/audio/asp/en/0110_a-tiny-seed-the-story-of-wangari-maathai_audio-slides.html
@@ -218,7 +218,7 @@
 <section class="slide level1">
 
 <h2 id="a-tiny-seed-the-story-of-wangari-maathai-1">A Tiny Seed: The Story of Wangari Maathai</h2>
-<strong>Text:</strong> Nicola Rijsdijk<br> <strong>Illustrations:</strong> Maya Marshak<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
+<strong>Text:</strong> Nicola Rijsdijk<br> <strong>Illustrations:</strong> Maya Marshak<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Darshan Soni<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
