--- a/audio/asp/en/0111_why-hippos-have-no-hair_audio-slides.html
+++ b/audio/asp/en/0111_why-hippos-have-no-hair_audio-slides.html
@@ -183,7 +183,7 @@
 <section class="slide level1">
 
 <h2 id="why-hippos-have-no-hair-1">Why hippos have no hair</h2>
-<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
+<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Darshan Soni<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
