--- a/audio/asp/en/0291_what-vusis-sister-said_audio-slides.html
+++ b/audio/asp/en/0291_what-vusis-sister-said_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Nozibele and the three hairs - Global African Storybook</title>
+  <title>What Vusi's sister said - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,19 +87,19 @@
 </head>
 <body>
 
-<section id="nozibele-and-the-three-hairs" class="slide level1">
-<h1>Nozibele and the three hairs</h1>
+<section id="what-vusis-sister-said" class="slide level1">
+<h1>What Vusi's sister said</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/01.jpg" />
 </center>
   
-<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
-<p>A long time ago, three girls went out to collect wood.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/02.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
+<p>Early one morning Vusi's granny called him, “Vusi, please take this egg to your parents. They want to make a large cake for your sister's wedding”.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -107,9 +107,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
-<p>It was a hot day so they went down to the river to swim. They played and splashed and swam in the water.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/03.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
+<p>On his way to his parents, Vusi met two boys picking fruit. One boy grabbed the egg from Vusi and shot it at a tree. The egg broke.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -117,9 +117,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
-<p>Suddenly, they realised that it was late. They hurried back to the village.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/04.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
+<p>“What have you done?” cried Vusi. “That egg was for a cake. The cake was for my sister's wedding. What will my sister say if there is no wedding cake?”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -127,9 +127,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
-<p>When they were nearly home, Nozibele put her hand to her neck. She had forgotten her necklace! &quot;Please come back with me!&quot; she begged her friends. But her friends said it was too late.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/05.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
+<p>The boys were sorry for teasing Vusi. “We can't help with the cake, but here is a walking stick for your sister,” said one. Vusi continued on his journey.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -137,9 +137,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
-<p>So Nozibele went back to the river alone. She found her necklace and hurried home. But she got lost in the dark.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/06.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
+<p>Along the way he met two men building a house. “Can we use that strong stick?” asked one. But the stick was not strong enough for building, and it broke.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -147,9 +147,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
-<p>In the distance she saw light coming from a hut. She hurried towards it and knocked at the door.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/07.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
+<p>“What have you done?” cried Vusi. “That stick was a gift for my sister. The fruit pickers gave me the stick because they broke the egg for the cake. The cake was for my sister's wedding. Now there is no egg, no cake, and no gift. What will my sister say?”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -157,9 +157,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
-<p>To her surprise, a dog opened the door and said, &quot;What do you want?&quot; &quot;I'm lost and I need a place to sleep,&quot; said Nozibele. &quot;Come in, or I'll bite you!&quot; said the dog. So Nozibele went in.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/08.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
+<p>The builders were sorry for breaking the stick. “We can't help with the cake, but here is some thatch for your sister,” said one. And so Vusi continued on his journey.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -167,9 +167,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
-<p>Then the dog said, &quot;Cook for me!&quot; &quot;But I've never cooked for a dog before,&quot; she answered. &quot;Cook, or I'll bite you!&quot; said the dog. So Nozibele cooked some food for the dog.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/09.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
+<p>Along the way, Vusi met a farmer and a cow. “What delicious thatch, can I have a nibble?” asked the cow. But the thatch was so tasty that the cow ate it all!</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/09.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>8</strong>
 </center>
@@ -177,9 +177,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p>Then the dog said, &quot;Make the bed for me!&quot; Nozibele answered, &quot;I've never made a bed for a dog.&quot; &quot;Make the bed, or I'll bite you!&quot; the dog said. So Nozibele made the bed.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/10.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
+<p>“What have you done?” cried Vusi. “That thatch was a gift for my sister. The builders gave me the thatch because they broke the stick from the fruit pickers. The fruit pickers gave me the stick because they broke the egg for my sister's cake. The cake was for my sister's wedding. Now there is no egg, no cake, and no gift. What will my sister say?”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/10.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>9</strong>
 </center>
@@ -187,9 +187,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
-<p>Every day she had to cook and sweep and wash for the dog. Then one day the dog said, &quot;Nozibele, today I have to visit some friends. Sweep the house, cook the food and wash my things before I come back.&quot;</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/11.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
+<p>The cow was sorry she was greedy. The farmer agreed that the cow could go with Vusi as a gift for his sister. And so Vusi carried on.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/11.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>10</strong>
 </center>
@@ -197,9 +197,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
-<p>As soon as the dog had gone, Nozibele took three hairs from her head. She put one hair under the bed, one behind the door, and one in the kraal. Then she ran home as fast as she could.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/12.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
+<p>But the cow ran back to the farmer at supper time. And Vusi got lost on his journey. He arrived very late for his sister's wedding. The guests were already eating.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/12.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>11</strong>
 </center>
@@ -207,9 +207,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>When the dog came back, he looked for Nozibele. &quot;Nozibele, where are you?&quot; he shouted. &quot;I'm here, under the bed,&quot; said the first hair. &quot;I'm here, behind the door,&quot; said the second hair. &quot;I'm here, in the kraal,&quot; said the third hair.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/13.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
+<p>“What shall I do?” cried Vusi. “The cow that ran away was a gift, in return for the thatch the builders gave me. The builders gave me the thatch because they broke the stick from the fruit pickers. The fruit pickers gave me the stick because they broke the egg for the cake. The cake was for the wedding. Now there is no egg, no cake, and no gift.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/13.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>12</strong>
 </center>
@@ -217,9 +217,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
-<p>Then the dog knew that Nozibele had tricked him. So he ran and ran all the way to the village. But Nozibele's brothers were waiting there with big sticks. The dog turned and ran away and has never been seen since.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/14.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/14.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
+<p>Vusi's sister thought for a while, then she said, “Vusi my brother, I don't really care about gifts. I don't even care about the cake! We are all here together, I am happy. Now put on your smart clothes and let's celebrate this day!” And so that's what Vusi did.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/ogg/14.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0291_what-vusis-sister-said/mp3/14.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>13</strong>
 </center>
@@ -227,12 +227,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="nozibele-and-the-three-hairs-1">Nozibele and the three hairs</h2>
-<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Darshan Soni<br>
+<h2 id="what-vusis-sister-said-1">What Vusi's sister said</h2>
+<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Darshan Soni<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-vusis-sister-said'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
