--- a/audio/asp/en/0294_grandmas-bananas_audio-slides.html
+++ b/audio/asp/en/0294_grandmas-bananas_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Nozibele and the three hairs - Global African Storybook</title>
+  <title>Grandma's bananas - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,19 +87,22 @@
 </head>
 <body>
 
-<section id="nozibele-and-the-three-hairs" class="slide level1">
-<h1>Nozibele and the three hairs</h1>
+<section id="grandmas-bananas" class="slide level1">
+<h1>Grandma's bananas</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
 </center>
   
-<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
-<p>A long time ago, three girls went out to collect wood.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/02.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
+<p>Grandma's garden was wonderful full of sorghum, millet, and cassava.</p>
+<p>But best of all were the bananas.</p>
+<p>Although Grandma had many grandchildren, I secretly knew that I was her favourite. She invited me often to her house. She also told me little secrets.</p>
+<p>But there was one secret she did not share with me: where she ripened bananas.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -107,9 +110,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
-<p>It was a hot day so they went down to the river to swim. They played and splashed and swam in the water.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/03.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
+<p>One day I saw a big straw basket placed in the sun outside Grandma's house. When I asked what it was for, the only answer I got was, “It's my magic basket.”</p>
+<p>Next to the basket, there were several banana leaves that Grandma turned from time to time. I was curious. “What are the leaves for, Grandma?” I asked. The only answer I got was, “They are my magic leaves.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -117,9 +121,11 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
-<p>Suddenly, they realised that it was late. They hurried back to the village.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/04.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
+<p>It was so interesting watching Grandma, the bananas, the banana leaves and the big straw basket. But Grandma sent me off to my mother on an errand.</p>
+<p>“Grandma, please, let me watch as you prepare...”</p>
+<p>“Don't be stubborn, child, do as you are told,” she insisted. I took off running.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -127,9 +133,11 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
-<p>When they were nearly home, Nozibele put her hand to her neck. She had forgotten her necklace! &quot;Please come back with me!&quot; she begged her friends. But her friends said it was too late.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/05.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
+<p>When I returned, Grandma was sitting outside but with neither the basket nor the bananas.</p>
+<p>“Grandma, where is the basket, where are all the bananas, and where...”</p>
+<p>But the only answer I got was, “They are in my magic place.” It was so disappointing!</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -137,9 +145,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
-<p>So Nozibele went back to the river alone. She found her necklace and hurried home. But she got lost in the dark.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/06.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
+<p>Two days later, Grandma sent me to fetch her walking stick from her bedroom.</p>
+<p>As soon as I opened the door, I was welcomed by the strong smell of ripening bananas. In the inner room was grandma's big magic straw basket. It was well hidden by an old blanket. I lifted it and sniffed that glorious smell.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -147,9 +156,11 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
-<p>In the distance she saw light coming from a hut. She hurried towards it and knocked at the door.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/07.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
+<p>Grandma's voice startled me when she called, “What are you doing? Hurry up and bring me the stick.”</p>
+<p>I hurried out with her walking stick. “What are you smiling about?” Grandma asked.</p>
+<p>Her question made me realise that I was still smiling at the discovery of her magic place.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -157,9 +168,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
-<p>To her surprise, a dog opened the door and said, &quot;What do you want?&quot; &quot;I'm lost and I need a place to sleep,&quot; said Nozibele. &quot;Come in, or I'll bite you!&quot; said the dog. So Nozibele went in.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/08.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
+<p>The following day when grandma came to visit my mother, I rushed to her house to check the bananas once more.</p>
+<p>There was a bunch of very ripe ones. I picked one and hid it in my dress. After covering the basket again, I went behind the house and quickly ate it. It was the sweetest banana I had ever tasted.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -167,9 +179,11 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
-<p>Then the dog said, &quot;Cook for me!&quot; &quot;But I've never cooked for a dog before,&quot; she answered. &quot;Cook, or I'll bite you!&quot; said the dog. So Nozibele cooked some food for the dog.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/09.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
+<p>The following day, when grandma was in the garden picking vegetables, I sneaked in and peered at the bananas.</p>
+<p>Nearly all were ripe. I couldn't help taking a bunch of four.</p>
+<p>As I tiptoed towards the door, I heard grandma coughing outside. I just managed to hide the bananas under my dress and walked past her.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/09.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>8</strong>
 </center>
@@ -177,9 +191,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p>Then the dog said, &quot;Make the bed for me!&quot; Nozibele answered, &quot;I've never made a bed for a dog.&quot; &quot;Make the bed, or I'll bite you!&quot; the dog said. So Nozibele made the bed.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/10.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
+<p>The following day was market day. Grandma woke up early. She always took ripe bananas and cassava to sell at the market.</p>
+<p>I did not hurry to visit her that day. But I could not avoid her for long.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/10.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>9</strong>
 </center>
@@ -187,9 +202,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
-<p>Every day she had to cook and sweep and wash for the dog. Then one day the dog said, &quot;Nozibele, today I have to visit some friends. Sweep the house, cook the food and wash my things before I come back.&quot;</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/11.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
+<p>Later that evening I was called by my mother and father, and Grandma. I knew why.</p>
+<p>That night as I lay down to sleep, I knew I could never steal again, not from grandma, not from my parents, and certainly not from anyone else.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0294_grandmas-bananas/mp3/11.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>10</strong>
 </center>
@@ -197,42 +213,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
-<p>As soon as the dog had gone, Nozibele took three hairs from her head. She put one hair under the bed, one behind the door, and one in the kraal. Then she ran home as fast as she could.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/12.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>When the dog came back, he looked for Nozibele. &quot;Nozibele, where are you?&quot; he shouted. &quot;I'm here, under the bed,&quot; said the first hair. &quot;I'm here, behind the door,&quot; said the second hair. &quot;I'm here, in the kraal,&quot; said the third hair.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/13.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
-<p>Then the dog knew that Nozibele had tricked him. So he ran and ran all the way to the village. But Nozibele's brothers were waiting there with big sticks. The dog turned and ran away and has never been seen since.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/ogg/14.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0066_nozibele-and-the-three-hairs/mp3/14.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="nozibele-and-the-three-hairs-1">Nozibele and the three hairs</h2>
-<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Darshan Soni<br>
+<h2 id="grandmas-bananas-1">Grandma's bananas</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Darshan Soni<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
