--- a/audio/asp/en/0331_rain_audio-slides.html
+++ b/audio/asp/en/0331_rain_audio-slides.html
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <h2 id="rain-1">Rain</h2>
-<strong>Text:</strong> Letta Machoga<br> <strong>Illustrations:</strong> Marleen Visser<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
+<strong>Text:</strong> Letta Machoga<br> <strong>Illustrations:</strong> Marleen Visser<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Darshan Soni<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
