--- a/stories/index.html
+++ b/stories/index.html
@@ -181,6 +181,12 @@
       <td><a name="ar0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0072</td>
+      <td><a href="/stories/ar/0072_انتقام-طائر-دليل-المناحل_slides.html" target="_blank">انتقام طائر دليل المناحل</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ar0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/ar/0087_-أحب-أن-أقرأ_slides.html" target="_blank">!أحب أن أقرأ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -197,6 +203,12 @@
       <td><a href="/stories/ar/0095_-زاما-المميز_slides.html" target="_blank">! زاما المميز</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0110</td>
+      <td><a href="/stories/ar/0110_البذرة-الصغيرة-حكاية-ونقاري-ماتهاي_slides.html" target="_blank">البذرة الصغيرة – حكاية ونقاري ماتهاي</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ar0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0111</td>
@@ -287,6 +299,12 @@
       <td><a href="/stories/ar/0271_اثنان_slides.html" target="_blank">اثنان</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0291</td>
+      <td><a href="/stories/ar/0291_ما-قالته-أخت-فوسي_slides.html" target="_blank">ما قالته أخت فوسي</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ar0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0294</td>
@@ -3443,7 +3461,7 @@
       <td>0072</td>
       <td><a href="http://my.africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0072">ko</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#ko0072">ko</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -3509,7 +3527,7 @@
       <td>0110</td>
       <td><a href="http://my.africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#tl0110">tl</a>, <a href="#zh0110">zh</a></td>
+      <td><a href="#ar0110">ar</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#tl0110">tl</a>, <a href="#zh0110">zh</a></td>
     </tr>
     <tr>
       <td>0111</td>
@@ -3767,7 +3785,7 @@
       <td>0291</td>
       <td><a href="http://my.africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#tl0291">tl</a>, <a href="#zh0291">zh</a></td>
+      <td><a href="#ar0291">ar</a>, <a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#tl0291">tl</a>, <a href="#zh0291">zh</a></td>
     </tr>
     <tr>
       <td>0293</td>
