--- a/stories/index.html
+++ b/stories/index.html
@@ -2629,6 +2629,12 @@
       <td><a name="pa0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0110</td>
+      <td><a href="/stories/pa/0110_ਇੱਕ-ਨਿੱਕਾ-ਬੀਜ-ਵੰਨਗਾਰੀ-ਮਾਂਥਾਂਈ-ਦੀ-ਕਹਾਣੀ_slides.html" target="_blank">ਇੱਕ ਨਿੱਕਾ ਬੀਜ: ਵੰਨਗਾਰੀ ਮਾਂਥਾਂਈ ਦੀ ਕਹਾਣੀ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0111</td>
       <td><a href="/stories/pa/0111_ਹਿੱਪੋ-ਦੇ-ਵਾਲ-ਕਿਉਂ-ਨਹੀਂ-ਹੁੰਦੇ_slides.html" target="_blank">ਹਿੱਪੋ ਦੇ ਵਾਲ ਕਿਉਂ ਨਹੀਂ ਹੁੰਦੇ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3527,7 +3533,7 @@
       <td>0110</td>
       <td><a href="http://my.africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0110">ar</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#tl0110">tl</a>, <a href="#zh0110">zh</a></td>
+      <td><a href="#ar0110">ar</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#tl0110">tl</a>, <a href="#zh0110">zh</a></td>
     </tr>
     <tr>
       <td>0111</td>
