--- a/stories/index.html
+++ b/stories/index.html
@@ -2677,6 +2677,12 @@
       <td><a name="pa0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0201</td>
+      <td><a href="/stories/pa/0201_ਗਧਾ-ਬੱਚਾ_slides.html" target="_blank">ਗਧਾ ਬੱਚਾ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0210</td>
       <td><a href="/stories/pa/0210_ਟਿੰਗੀ-ਅਤੇ-ਗਾਂਵਾਂ_slides.html" target="_blank">ਟਿੰਗੀ ਅਤੇ ਗਾਂਵਾਂ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3671,7 +3677,7 @@
       <td>0201</td>
       <td><a href="http://my.africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0201">ar</a>, <a href="#ko0201">ko</a>, <a href="#tl0201">tl</a>, <a href="#zh0201">zh</a></td>
+      <td><a href="#ar0201">ar</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#tl0201">tl</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
