--- a/audio/asp/index.html
+++ b/audio/asp/index.html
@@ -68,7 +68,27 @@
             <li><a href="en/0337_children-of-wax_audio-slides.html" target="_blank">Children of wax</a></li>
             <li><a href="en/0342_punishment_audio-slides.html" target="_blank">Punishment</a></li>
           </ul>
-        <h3>Luganda</h3>
+        <h3><a name="fr"></a>French [français]</h3>
+          <ul>
+            <li><a href="fr/0001_un-homme-tres-grand_audio-slides.html" target="_blank">Un homme très grand</a></li>
+            <li><a href="fr/0002_regardez-les-animaux_audio-slides.html" target="_blank">Regardez les animaux</a></li>
+            <li><a href="fr/0003_les-vêtements-décole_audio-slides.html" target="_blank">Les vêtements d'école</a></li>
+            <li><a href="fr/0004_chèvre-chien-et-vache_audio-slides.html" target="_blank">Chèvre, Chien et Vache</a></li>
+            <li><a href="fr/0006_anansi-et-la-sagesse_audio-slides.html" target="_blank">Anansi et la sagesse</a></li>
+            <li><a href="fr/0008_quest-ce-que-tu-fais_audio-slides.html" target="_blank">Qu'est-ce que tu fais ?</a></li>
+            <li><a href="fr/0009_où-est-mon-chat_audio-slides.html" target="_blank">Où est mon chat ?</a></li>
+            <li><a href="fr/0027_la-décision_audio-slides.html" target="_blank">La décision</a></li>
+            <li><a href="fr/0030_les-sentiments_audio-slides.html" target="_blank">Les sentiments</a></li>
+            <li><a href="fr/0052_simbegwire_audio-slides.html" target="_blank">Simbegwire</a></li>
+            <li><a href="fr/0066_nozibele-et-les-trois-cheveux_audio-slides.html" target="_blank">Nozibele et les trois cheveux</a></li>
+            <li><a href="fr/0067_cuisiner_audio-slides.html" target="_blank">Cuisiner</a></li>
+            <li><a href="fr/0072_la-revanche-de-lindicateur_audio-slides.html" target="_blank">La revanche de l'indicateur</a></li>
+            <li><a href="fr/0087_jaime-lire_audio-slides.html" target="_blank">J'aime lire</a></li>
+            <li><a href="fr/0089_khalai-parle-aux-plantes_audio-slides.html" target="_blank">Khalai parle aux plantes</a></li>
+            <li><a href="fr/0095_zama-est-formidable_audio-slides.html" target="_blank">Zama est formidable !</a></li>
+            <li><a href="fr/0110_une-petite-graine-lhistoire-de-wangari-maathai_audio-slides.html" target="_blank">Une petite graine : l'histoire de Wangari Maathai</a></li>
+          </ul>
+        <h3>Luganda [Oluganda]</h3>
           <ul>
             <li><a href="lg/0066_nakku-nenviiri-essatu_audio-slides.html" target="_blank">Nakku n'enviiri essatu</a></li>
             <li><a href="lg/0231_akatabo-kobudde_audio-slides.html" target="_blank">Akatabo k'obudde</a></li>
