--- a/stories/index.html
+++ b/stories/index.html
@@ -2617,6 +2617,12 @@
       <td><a name="pa0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0072</td>
+      <td><a href="/stories/pa/0072_ਪੰਛੀ-ਦਾ-ਬਦਲਾ_slides.html" target="_blank">ਪੰਛੀ ਦਾ ਬਦਲਾ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/pa/0087_ਮੈਨੂੰ-ਪੜ੍ਹਣਾ-ਪਸੰਦ-ਹੈ_slides.html" target="_blank">ਮੈਨੂੰ ਪੜ੍ਹਣਾ ਪਸੰਦ ਹੈ!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3485,7 +3491,7 @@
       <td>0072</td>
       <td><a href="http://my.africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0072">ar</a>, <a href="#ko0072">ko</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
