--- a/stories/ar/0111_لماذا-لاتملك-أفراس-النهرشعرا_slides.html
+++ b/stories/ar/0111_لماذا-لاتملك-أفراس-النهرشعرا_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
-<p dir="rtl">لهذ السبب لا تخرج فرس النهرمن الماء أبدا فهي تخاف من الاحتراق بالنار أما الأرنب كان سعيدا جدا عندما احترقت فرس النهر فقال أخيرا تخلصت منها!</p>
+<p dir="rtl">فرح الأرنب أن شعر فرس النهر قد احترق٠ وحتى يومنا هذا، وخوفا من النار، لا تبتعد فرس النهر عن الماء أبدا٠</p>
 <center>
 <strong>8</strong>
 </center>
